# lepbook

./: Cargo.toml  README.md
crates-app/mdapp/: Cargo.toml  index.html  leptosfmt.toml  rust-toolchain.toml  tailwind.config.js
crates-app/mdapp/css/: output.css
crates-app/mdapp/src/: lib.rs  main.rs  router.rs
crates-app/mdapp/src/components/: home.rs
crates-app/mdapp/src/components/nav/: mod.rs  side_drawer.rs  side_nav.rs
crates-parsing/links-generator/: Cargo.toml
crates-parsing/links-generator/src/: lib.rs  main.rs  text_parse.rs
src/: SUMMARY.md  storage_maps.md  storage_maps.toml  using_events.md  using_events.toml
