[package]
name = "mdapp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
leptos-use = { version = "0.13" }
leptos_router = { version = "0.6.13", features = ["csr", "nightly"] }
thaw = { version = "0.3.4", features = ["csr"] }
